# WorkedPapers

./: .gitignore  FILES_PAGE_DRAG_DEBUG.md  README.md  index.html  package-lock.json  package.json  project-specs.md  vite.config.ts
doc-templates/: balance-sheet.html
docs/: document-template-engine.md
guides/: document-template-specification.md
sample-data/: sample_trial_balance.csv
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_drop_account_type.sql  003_file_cabinet.sql  004_report_engine.sql  005_document_templates.sql  006_map_enhancements.sql  007_signoff_initials.sql  008_document_links.sql  009_lock_metadata.sql  010_leadsheet_annotations.sql  011_annotation_scope_index.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  report_engine.rs  wwp.rs
src-tauri/src/commands/: aje.rs  archive.rs  engagement.rs  files.rs  leadsheet.rs  mapping.rs  mod.rs  reports.rs  rollforward.rs  settings.rs  signoff.rs  templates.rs  trial_balance.rs
src/components/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
src/components/ui/: CommandPalette.tsx  DataPicker.tsx  StatementEditor.tsx  TbImportWizard.tsx
src/lib/: format.ts  tauri.ts
src/pages/: AjePage.tsx  AuditPage.tsx  DocumentsPage.tsx  FilesPage.tsx  LeadsheetPage.tsx  MappingPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TrialBalancePage.tsx  WelcomePage.tsx
src/store/: atoms.ts
src/types/: index.ts
src/workers/: reportRenderer.worker.ts  tbParser.worker.ts
