[package]
name = "worked-papers"
version = "0.1.0"
description = "A modern working papers application for accounting firms"
authors = ["WorkedPapers"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "worked_papers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "worked-papers"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [
  "dialog-all",
  "fs-all",
  "path-all",
  "shell-open",
  "window-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite — using rusqlite with bundled feature so no external sqlite needed
rusqlite = { version = "0.31", features = ["bundled"] }

# Thread pool for background computation
rayon = "1.10"

# Error handling
thiserror = "1"
anyhow = "1"

# CSV parsing (for TB import fallback validation in Rust)
csv = "1.3"

# Zip / compression for .wwp export
zip = { version = "2.1", features = ["deflate"] }

# AES-256-GCM encryption for .wwp files
aes-gcm = "0.10"
rand = "0.8"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUIDs for engagement IDs
uuid = { version = "1", features = ["v4"] }

# Open files with system default app
opener = "0.7"

# SHA-256 for cryptographic seal
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.19.1"
windows = { version = "0.39.0", features = ["Win32_Foundation"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
